tests/ui/proc-macro/lifetimes.stderr
error: expected type, found `'`
  --> $DIR/lifetimes.rs:7:10
   |
LL | type A = single_quote_alone!();
   |          ^^^^^^^^^^^^^^^^^^^^^
   |          |
   |          expected type
   |          this macro call doesn't expand to a type
   |          in this macro invocation
   |
  ::: $DIR/auxiliary/lifetimes.rs:11:1
   |
LL | pub fn single_quote_alone(_: TokenStream) -> TokenStream {
   | -------------------------------------------------------- in this expansion of `single_quote_alone!`

error: aborting due to previous error

